addons/security/keycloak/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgres
  labels:
    app: keycloak-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
          - name: http
            containerPort: 5432
        resources: {}
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-data-vol
      restartPolicy: Always
      volumes:
        - name: postgres-data-vol
          persistentVolumeClaim:
            claimName: postgres-data-pvc
status: {}
