addons/security/keycloak/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
  labels:
    app: keycloak-postgres
spec:
  selector:
    app: keycloak-postgres
  #type: LoadBalancer
  type: ClusterIP
  ports:
    - name: http
      port: 5432
      targetPort: 5432
status:
  loadBalancer: {}
